<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="@dimen/padding10"
        android:paddingLeft="@dimen/padding16"
        android:paddingRight="@dimen/padding16"
        android:paddingBottom="@dimen/padding10">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/travel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/travel"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/shoot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/shoot"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/beauty_passage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/beauty_passage"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/beauty_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/beauty_food"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/work"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/work"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/health"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>

            <RadioButton
                android:id="@+id/belle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/belle"
                android:textColor="@drawable/text_white_blue_selector"
                android:textSize="@dimen/text_normal_x"/>
        </RadioGroup>
    </LinearLayout>
    <in.srain.cube.views.ptr.PtrClassicFrameLayout
        android:id="@+id/ptrFrameLayout"
        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_duration_to_close="300"
        cube_ptr:ptr_duration_to_close_header="2000"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="true" >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"/>
        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
</LinearLayout>
